Fixed bug #25777 (Do not rtrim() of text fields fetched from mssql)